--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <textarea placeholder="Mesajınız" required></textarea>
                 <button type="submit">Gönder</button>
             </form>
+            <p id="successMessage" class="toast-message">
+                📬 Mesaj iletildi!  
+            </p>
         </section>
     </div>
 </body>
