--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section id="projects" style="height: 100vh;"></section>
 
 
-        <section id="contact" class="contact-section">
+        <section id="contact" class="contact-section" style="height: 100vh;">
             <h2>İletişim</h2>
             <form class="contact-form">
                 <input type="text" placeholder="Ad Soyad" required>
